--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(epp-inst)
 add_subdirectory(epp-rt)
 add_subdirectory(grok)
+add_subdirectory(mw)
 add_subdirectory(inliner)
 add_subdirectory(namer)
