Added 32 bit library for runtime

--- a/lib/epp-rt/CMakeLists.txt
+++ b/lib/epp-rt/CMakeLists.txt
@@ -2,6 +2,9 @@ add_library(epp-rt SHARED
     Runtime.cpp
     )
 
-llvm_map_components_to_libnames(REQ_LLVM_LIBRARIES ${LLVM_TARGETS_TO_BUILD} support)
+# Add a 32 bit library as well
 
-target_link_libraries(epp-rt ${REQ_LLVM_LIBRARIES})
+add_library(epp-rt-m32 SHARED
+    Runtime.cpp
+    )
+set_target_properties(epp-rt-m32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
