--- a/lib/epp-rt/CMakeLists.txt
+++ b/lib/epp-rt/CMakeLists.txt
@@ -1,10 +1,13 @@
-add_library(epp-rt SHARED
-    Runtime.cpp
-    )
 
-# Add a 32 bit library as well
-
-add_library(epp-rt-m32 SHARED
-    Runtime.cpp
+if(RT32 OR CMAKE_SIZEOF_VOID_P EQUAL 4)
+    add_library(epp-rt SHARED
+        Runtime32.cpp
     )
-set_target_properties(epp-rt-m32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+    set_target_properties(epp-rt PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+else()
+    add_library(epp-rt SHARED
+        Runtime64.cpp
+    )
+endif()
+
+
