--- a/lib/epp-rt/CMakeLists.txt
+++ b/lib/epp-rt/CMakeLists.txt
@@ -1,13 +1,14 @@
 
 if(RT32 OR CMAKE_SIZEOF_VOID_P EQUAL 4)
-    add_library(epp-rt SHARED
-        Runtime32.cpp
-    )
+    add_definitions(-DRT32)
+endif()
+
+add_library(epp-rt SHARED
+    Runtime.cpp
+)
+
+if(RT32 OR CMAKE_SIZEOF_VOID_P EQUAL 4)
     set_target_properties(epp-rt PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
-else()
-    add_library(epp-rt SHARED
-        Runtime64.cpp
-    )
 endif()
 
 
