Added support for merge based chops, needs testing

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,3 +10,5 @@ add_subdirectory(count)
 add_subdirectory(simplify)
 add_subdirectory(InstruMem)
 add_subdirectory(bitcode)
+add_subdirectory(stats)
+add_subdirectory(json11)
