--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,5 +8,5 @@ add_subdirectory(count)
 add_subdirectory(simplify)
 add_subdirectory(InstruMem)
 add_subdirectory(bitcode)
-add_subdirectory(stats)
+#add_subdirectory(stats)
 add_subdirectory(aew)
