--- a/lib/common/CMakeLists.txt
+++ b/lib/common/CMakeLists.txt
@@ -4,6 +4,8 @@ if(RT32 OR CMAKE_SIZEOF_VOID_P EQUAL 4)
 endif()
 
 add_library(common
+    Statistics.cpp
+    BranchTaxonomy.cpp
     Common.cpp
     Helpers.cpp)
 
