Added docs, updated CMakeList and README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(PACKAGE_VERSION 0.1)
 set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
 set(PACKAGE_BUGREPORT "ska124@sfu.ca")
 
-set(CMAKE_CXX_FLAGS "-std=c++1y -Werror -Wno-deprecated-declarations")
+set(CMAKE_CXX_FLAGS "-fno-rtti -std=c++1y -Werror -Wno-deprecated-declarations")
 option(RT32 "32 bit EPP Runtime" OFF)
 option(TRACE_RUNTIME "Collect Run Length Encoded (RLE) Trace for EPP" OFF)
 
@@ -26,9 +26,7 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
 include(AddLLVM)
 
-option(LLVM_ENABLE_CXX11  "Enable C++11" ON)
-option(LLVM_ENABLE_EH "Enable Exception Handling" ON)
-option(LLVM_ENABLE_RTTI "Enable RTTI" ON)
+#option(LLVM_ENABLE_CXX11  "Enable C++11" ON)
 
 option(LLVM_INCLUDE_TOOLS "Generate build targets for the LLVM tools." ON)
 option(LLVM_BUILD_TOOLS
@@ -44,23 +42,10 @@ include_directories( ${LLVM_INCLUDE_DIRS} )
 link_directories( ${LLVM_LIBRARY_DIRS} )
 add_definitions( ${LLVM_DEFINITIONS} )
 
-# Find and include boost 
-
-# set(Boost_USE_STATIC_LIBS OFF) 
-# set(Boost_USE_MULTITHREADED ON)  
-# set(Boost_USE_STATIC_RUNTIME OFF) 
-# find_package(Boost 1.55.0 COMPONENTS graph regex) 
-# 
-# if(Boost_FOUND)
-#     include_directories(${Boost_INCLUDE_DIRS}) 
-#     #target_link_libraries(pasha ${Boost_LIBRARIES})
-# else()
-#     message( FATAL_ERROR "Pasha needs Boost 1.55 or higher, CMake will exit.")
-# endif()
 
 # Find clang 
 
-set(CLANG_VERSION_REQ "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}")
+set(CLANG_VERSION_REQ "${LLVM_PACKAGE_VERSION}")
 find_package(Clang)
 if(CLANG_FOUND)
     if(${CLANG_VERSION} VERSION_EQUAL CLANG_VERSION_REQ) 
