--- a/tools/mwe/CMakeLists.txt
+++ b/tools/mwe/CMakeLists.txt
@@ -13,7 +13,7 @@ llvm_map_components_to_libnames(REQ_LLVM_LIBRARIES ${LLVM_TARGETS_TO_BUILD}
         asmparser core linker bitreader bitwriter irreader ipo scalaropts
         analysis target mc support)
 
-target_link_libraries(mwe inliner namer mw common simplify InstruMem aew ${REQ_LLVM_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(mwe inliner namer mw common simplify ${REQ_LLVM_LIBRARIES})
 
 # Platform dependencies.
 #target_link_libraries(mwe
