--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ before_install:
 - echo $LC_ALL
 - if [ $TRAVIS_OS_NAME == linux ]; then ./scripts/dependencies.sh; fi
 before_script: 
-    - cmake .
+- cmake .
 script:
-    - make -j 4
-
+- make -j 4
+branches:
+  only:
+  - master
 
