--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ language: cpp
 sudo: required
 dist: trusty
 compiler:
-- g++-5
+- g++
 os:
 - linux
 before_install:
 - ./scripts/dependencies.sh
 before_script: 
+- sudo unlink /usr/bin/gcc && sudo ln -s /usr/bin/gcc-5 /usr/bin/gcc
+- sudo unlink /usr/bin/g++ && sudo ln -s /usr/bin/g++-5 /usr/bin/g++
 - g++ --version
 - cmake .
 script:
