--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 sudo: required
-dist: xenial 
+dist: trusty 
 compiler:
 - g++
 os:
@@ -8,11 +8,10 @@ os:
 before_install:
 - ./scripts/dependencies.sh
 before_script: 
-- sudo apt-get autoremove llvm-dev llvm llvm-3.5 clang clang-3.5
 - sudo unlink /usr/bin/gcc && sudo ln -s /usr/bin/gcc-5 /usr/bin/gcc
 - sudo unlink /usr/bin/g++ && sudo ln -s /usr/bin/g++-5 /usr/bin/g++
 - g++ --version
-- cmake .
+- cmake -DLLVM_DIR=clang+llvm-3.8.1-x86_64-linux-gnu-ubuntu-14.04/share/llvm/cmake/ .
 script:
 - make -j 4
 branches:
