--- a/examples/workloads/444.namd/Makefile
+++ b/examples/workloads/444.namd/Makefile
@@ -6,7 +6,7 @@ BC=$(BITCODE_REPO)/$(LLVM_VERSION)/$(SUITE)/$(NAME).bc
 CFLAGS=
 FUNCTION=_ZN20ComputeNonbondedUtil26calc_pair_energy_fullelectEP9nonbonded
 LDFLAGS=
-RUNCMD="--input $(DATA)/$(NAME)/namd.input --iterations 20 --output namd.out"
+RUNCMD=--input $(DATA)/$(NAME)/namd.input --iterations 20 --output namd.out
 TESTCMD="--input $(DATA)/$(NAME)/namd.input --iterations 10 --output namd.out"
 PRERUN=
 
