--- a/examples/workloads/456.hmmer/Makefile
+++ b/examples/workloads/456.hmmer/Makefile
@@ -6,7 +6,7 @@ BC=$(BITCODE_REPO)/$(LLVM_VERSION)/$(SUITE)/$(NAME).bc
 CFLAGS=
 FUNCTION=P7Viterbi
 LDFLAGS=
-RUNCMD="$(DATA)/$(NAME)/nph3.hmm $(DATA)/$(NAME)/swiss41"
+RUNCMD=$(DATA)/$(NAME)/nph3.hmm $(DATA)/$(NAME)/swiss41
 TESTCMD=" $(DATA)/$(NAME)/bombesin.hmm"
 PRERUN=
 
