--- a/examples/workloads/bodytrack/Makefile
+++ b/examples/workloads/bodytrack/Makefile
@@ -6,7 +6,7 @@ BC=$(BITCODE_REPO)/$(LLVM_VERSION)/$(SUITE)/$(NAME).bc
 CFLAGS=
 FUNCTION=_ZN17ImageMeasurements11InsideErrorERK17ProjectedCylinderRK11BinaryImageRiS6_
 LDFLAGS=
-RUNCMD="$(DATA)/$(NAME)/sequenceB_4 4 4 4000 5 0 1"
+RUNCMD=$(DATA)/$(NAME)/sequenceB_4 4 4 4000 5 0 1
 PRERUN=
 TESTCMD="$(DATA)/$(NAME)/sequenceB_small 4 1 1000 5 0 1"
 
