--- a/examples/workloads/fft-2d/Makefile
+++ b/examples/workloads/fft-2d/Makefile
@@ -6,7 +6,7 @@ BC=$(BITCODE_REPO)/$(LLVM_VERSION)/$(SUITE)/$(NAME).bc
 CFLAGS=
 FUNCTION=fft
 LDFLAGS=
-RUNCMD=""
+RUNCMD=
 PRERUN=""
 LIBS="-lrt"
 
