--- a/examples/workloads/183.equake/Makefile
+++ b/examples/workloads/183.equake/Makefile
@@ -6,7 +6,7 @@ BC=$(BITCODE_REPO)/$(LLVM_VERSION)/$(SUITE)/$(NAME).bc
 CFLAGS=
 FUNCTION=smvp
 LDFLAGS=
-RUNCMD="<$(DATA)/$(NAME)/inp-ref.in"
+RUNCMD=<$(DATA)/$(NAME)/inp-ref.in
 TESTCMD="$(DATA)/$(NAME)/inp-test.in"
 PRERUN=
 
