--- a/examples/workloads/blackscholes/Makefile
+++ b/examples/workloads/blackscholes/Makefile
@@ -8,7 +8,7 @@ BC=$(BITCODE_REPO)/$(LLVM_VERSION)/$(SUITE)/$(NAME).bc
 CFLAGS=
 FUNCTION=_Z19BlkSchlsEqEuroNoDivfffffif
 LDFLAGS=
-RUNCMD="1 input.txt output.txt"
+RUNCMD=1 input.txt output.txt
 PRERUN="ln -s $(DATA)/$(NAME)/input.txt"
 TESTCMD="1 in_small.txt output.txt"
 
