Added more documentation

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(epp)
-add_subdirectory(mw)
+add_subdirectory(needle)
 add_subdirectory(inliner)
 add_subdirectory(namer)
 add_subdirectory(common)
