Changed the undo log to be passed in as function call param rather than being used directly as a global

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ before_script:
 - cmake -DLLVM_DIR=clang+llvm-3.8.1-x86_64-linux-gnu-ubuntu-14.04/share/llvm/cmake/ .
 script:
 - make VERBOSE=1
-- cd examples/workloads/164.gzip && make needle-run-path
+- make -C examples/workloads/164.gzip needle-path
+- make -C examples/workloads/183.gzip needle-path
 branches:
   only:
   - master
